# codevo-editor

./: CLAUDE.md  README.md  index.html  package-lock.json  package.json
docs/: ARCHITECTURE_REVIEWS.md  DEV_QA.md  FEATURES.md  IMPLEMENTATION_BACKLOG.md  MACOS_RELEASE_CI.md  MACOS_SIGNING_NOTARIZATION_PLAN.md  PACKAGING_RUNTIME_READINESS.md  PROGRESS.md  PROJECT_PLAN.md  QA_TEST_PLAN.md  SIDECAR_RUNTIME_PACKAGING_PLAN.md  UPDATE_CHANNEL_PLAN.md  WINDOWS_LINUX_FEASIBILITY.md
scripts/: debug-tauri-launcher.mjs  debug-tauri-launcher.test.mjs  debug-tauri-processes.mjs  debug-tauri-processes.test.mjs  (+6 more)
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: editor-shell-integration.bash  editor-shell-integration.zlogin  editor-shell-integration.zprofile  editor-shell-integration.zsh  editor-shell-integration.zshenv
src-tauri/src/: artisan.rs  composer.rs  debug_adapter.rs  debug_cdp.rs  debug_dbgp.rs  debug_support.rs  eslint.rs  file_fuzzy_matcher.rs  file_watcher.rs  git.rs  ignore_matcher.rs  index.rs  index_reindex.rs  index_scan.rs  index_update.rs  job_scheduler.rs  js_test_run.rs  js_ts_file_watcher.rs  js_ts_symbols.rs  lib.rs  local_history.rs  lsp.rs  lsp_diagnostics.rs  lsp_document.rs  lsp_features.rs  lsp_session.rs  lsp_transport.rs  managed_javascript_typescript.rs  managed_phpactor.rs  php_file_outline.rs  php_parser.rs  php_symbols.rs  php_test_run.rs  php_tree.rs  phpstan.rs  pint.rs  prettier.rs  project.rs  runtime_observability.rs  search.rs  (+11 more)
(+1602 files in other folders)
