[package]
name = "codevo-editor"
version = "0.1.0"
description = "Codevo Editor is a Fleet-like PHP-focused desktop code editor"
authors = ["Matus Mockor"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "editor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-dialog = "2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
ignore = "0.4.26"
regex = "1"
libc = "0.2"
notify = "8.2.0"
tree-sitter = "0.26.9"
tree-sitter-php = "0.24.2"
portable-pty = "0.9.0"
fontdb = "0.23.0"
quick-xml = "=0.39.4"
tungstenite = "0.30.0"
